--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <hrml lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Lista de Cursos de DevOps de Alura</title>
+        <title>Lista de los Cursos de DevOps de Alura</title>
     </head>
     <body>
         <ul>
