--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <ul>
-            <li>Vagrant: Gerenciando máquinas virtuales</li>
+            <li>Vagrant: Gerenciando Máquinas virtuales</li>
             <li>Docker: Creando containers sin Dolor de Cabeza</li>
             <li>Ansible</li>
             <li>Integración Continua: Madurez y Productividad en el Desarrollo de Sorfware</li>
