--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <ul>
-            <li>Vagrant: Gerenciando máquinas Virtuales</li>
-            <li>Docker: Creando containers sin Dolor de Cabeza</li>
+            <li>Vagrant: Gerenciando máquinas virtuales</li>
+            <li>Docker: Creando containers sin dolor de cabeza</li>
             <li>Ansible</li>
             <li>Integración Continua: Madurez y Productividad en el Desarrollo de Sorfware</li>
             <li>Kubernetes</li>
