modificando curso de docker

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <hrml lang="en">
-    <head>
+    <head>git
         <meta charset="UTF-8">
         <title>Listado de Cursos de DevOps de Alura</title>
     </head>
